test/org/midica/testfiles/failing/sk-with-param.midica
INCLUDE inc/instruments.midica

META
	composer	Beethoven
	
	SOFT_KARAOKE test
		language   ENGL
	END
END
